unpackaged/main/default/objects/References__c/References__c.object-meta.xml
<CustomObject>
    <description>References for customer Accounts</description>
    <label>References</label>
    <nameField>
        <label>References Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>