unpackaged/main/default/objects/References__c/fields/Acct_Reference__c.field-meta.xml
<CustomField>
    <fullName>Acct_Reference__c</fullName>
    <description>Customer Account reference</description>
    <label>Acct Reference</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>References</relationshipLabel>
    <relationshipName>References</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>