unpackaged/main/default/objects/References__c/fields/Ref_Contact__c.field-meta.xml
<CustomField>
    <fullName>Ref_Contact__c</fullName>
    <description>Contact name for reference</description>
    <inlineHelpText>Enter the name of the specific contact at this reference</inlineHelpText>
    <label>Ref Contact</label>
    <length>32</length>
    <type>Text</type>
</CustomField>