unpackaged/main/default/objects/References__c/fields/Ref_Name__c.field-meta.xml
<CustomField>
    <fullName>Ref_Name__c</fullName>
    <description>Reference Name</description>
    <inlineHelpText>Enter the company name of this reference</inlineHelpText>
    <label>Ref Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>