unpackaged/main/default/objects/References__c/fields/Ref_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ref_Phone__c</fullName>
    <description>Phone number for contact at this reference</description>
    <inlineHelpText>Enter Phone number for contact at this reference</inlineHelpText>
    <label>Ref Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>